--- a/monad-gen/monad-gen.cabal
+++ b/monad-gen/monad-gen.cabal
@@ -8,7 +8,7 @@ cabal-version:       >=2.0
 executable monad-gen
   hs-source-dirs:      src
   main-is:             MonadGen.hs
-  other-modules:       Vec, Enum1
+  other-modules:       Vec, Enum1, Cardinality
   default-language:    Haskell2010
   build-depends:       base >= 4.10 && < 5
                      , vector
