--- a/experiment.cabal
+++ b/experiment.cabal
@@ -1,14 +1,10 @@
 name:                experiment
 version:             0.1.0.0
--- synopsis:
--- description:
 homepage:            https://github.com/githubuser/experiment#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2018 Author name here
-category:            Web
+author:              Koji Miyazato
+copyright:           2018-2019 Koji Miyazato
 build-type:          Simple
 cabal-version:       >=2.0
 extra-source-files:  README.md
@@ -18,29 +14,38 @@ executable experiment
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.10 && < 5
+                       -- Basic techs
+                     , mtl
+                     , deepseq
+                     , QuickCheck
+                     , data-memocombinators
+
+                       -- Data Structures
                      , containers
                      , unordered-containers
                      , data-ordlist
                      , array
                      , vector
-                     , mtl
+                     , witherable
+                     , these
+                     , semialign
+
+                       -- Number Crunching
                      , random
-                     , deepseq
+                     , arithmoi
+                     , integer-logarithms
+                     , Decimal
+
+                       -- Type theories
                      , reflection
                      , constraints
                      , contravariant
                      , bifunctors
                      , profunctors
                      , recursion-schemes
-                     , pipes
-                     , arithmoi
-                     , Decimal
-                     , integer-logarithms
-                     , data-memocombinators
+
+                       -- Low-level
                      , unix
                      , ghc-prim
-                     , witherable
-                     , these
-                     , QuickCheck
   ghc-options:         -Wall -Wcompat
 
