--- a/lattices/lattices.cabal
+++ b/lattices/lattices.cabal
@@ -6,9 +6,7 @@ cabal-version:       >=2.0
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Searchable,
-                       Cantor,
-                       Lattice,
+  exposed-modules:     Lattice,
                        Lattice.BitSet,
                        Lattice.Classes,
                        Lattice.Dual,
@@ -16,6 +14,7 @@ library
                        FinCoFin,
                        POrd
   build-depends:       base >= 4.7 && < 5,
-                       containers, deepseq, intervals
+                       containers, deepseq
   default-language:    Haskell2010
   ghc-options:         -Wall -Wno-dodgy-exports
+
