--- a/monad-gen/monad-gen.cabal
+++ b/monad-gen/monad-gen.cabal
@@ -2,13 +2,16 @@ name:                monad-gen
 version:             0
 build-type:          Simple
 cabal-version:       >=2.0
+extra-source-files:  README.md
 
 executable monad-gen
   hs-source-dirs:      src
   main-is:             MonadGen.hs
-  other-modules:       Vec, Enum1
+  other-modules:       Vec, NatMap, Enum1, Enum1.Extra, Targets, Util
   default-language:    Haskell2010
   build-depends:       base >= 4.10 && < 5
                      , vector
+                     , containers
                      , mtl
-  ghc-options:         -Wall -Wcompat
+                     , ansi-terminal
+  ghc-options:         -Wall -Wcompat -O2 -ddump-simpl -ddump-to-file -dsuppress-all
