--- a/autolift/autolift.cabal
+++ b/autolift/autolift.cabal
@@ -15,7 +15,7 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     AutoLift
-  build-depends:       base ^>=4.12.0.0
+  build-depends:       base >=4.12
                      , reflection
   hs-source-dirs:      .
   default-language:    Haskell2010
