--- a/test-mixin/mix-a/mix-a.cabal
+++ b/test-mixin/mix-a/mix-a.cabal
@@ -6,7 +6,7 @@ maintainer:          viercc@gmail.com
 build-type:          Simple
 
 library
-  build-depends:       base >=4.13 && <4.14
+  build-depends:       base >=4.13
   hs-source-dirs:      .
   exposed-modules:     Clash
   default-language:    Haskell2010
