--- a/test-mixin/mix-b/mix-b.cabal
+++ b/test-mixin/mix-b/mix-b.cabal
@@ -7,7 +7,7 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
 library
-  build-depends:       base >=4.13 && <4.14
+  build-depends:       base >=4.13
   hs-source-dirs:      .
   exposed-modules:     Clash
   default-language:    Haskell2010
