--- a/test-mixin/test-mixin.cabal
+++ b/test-mixin/test-mixin.cabal
@@ -8,7 +8,7 @@ extra-source-files:  CHANGELOG.md
 
 executable test-mixin
   main-is:             Main.hs
-  build-depends:       base >=4.13 && <4.14, mix-a, mix-b, mix-c
+  build-depends:       base >=4.13, mix-a, mix-b, mix-c
   hs-source-dirs:      .
   default-language:    Haskell2010
 
