Make clean library-ish module FMonad out of FMonadExamples

--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -17,8 +17,9 @@ library
                    LogRwd, Matrix, MatrixCatamorphism,
                    Ordinal, Polynomial, Readerize,
                    Selective, Selective2, TreesThatGrow,
-                   ListTVia, FMonadExamples
+                   ListTVia, FMonadExamples, FMonad
   build-depends:       base >= 4.10 && < 5
+                     , transformers
                      , mtl
                      , free
                      , data-ordlist
