--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -18,7 +18,8 @@ library
                    Ordinal, Polynomial, Readerize,
                    PrismSelective, Selective2, TreesThatGrow,
                    ListTVia, FMonadExamples, FMonad,
-                   Poifree, PartialMonad
+                   Poifree, PartialMonad,
+                   HeytingApplicative
   build-depends:       base >= 4.10 && < 5
                      , ghc-prim
                      , reflection
