--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -41,10 +41,6 @@ library
                      , QuickCheck
                      
                      , autolift
+                     , lattices
   ghc-options:       -Wall -Wcompat
                      -Wunused-packages -Wwarn=unused-packages
-
-executable experiment-configured
-  build-depends:       base, experiment
-  default-language:    Haskell2010
-  main-is: ok.hs
