--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -19,7 +19,7 @@ library
                    PrismSelective, Selective2, TreesThatGrow,
                    ListTVia, FMonadExamples, FMonad,
                    Poifree, PartialMonad,
-                   Newtypes, HeytingApplicative
+                   Newtypes, HeytingApplicative, Hoard
   build-depends:       base >= 4.10 && < 5
                      , ghc-prim
                      , reflection
