--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -19,10 +19,12 @@ library
                    PrismSelective, Selective2, TreesThatGrow,
                    ListTVia, FMonadExamples, FMonad,
                    Poifree, PartialMonad,
-                   Newtypes, HeytingApplicative, Hoard
+                   Newtypes, HeytingApplicative, Hoard,
+                   CoerceUnder
   build-depends:       base >= 4.10 && < 5
                      , ghc-prim
                      , reflection
+                     , newtype
                      
                      , containers
                      , data-ordlist
@@ -32,10 +34,13 @@ library
                      , selective
                      , semialign
                      , these
+                     , finite-typelits
+                     , finitary
                      
                      , transformers
                      , mtl
                      , free
+                     , profunctors
                      , comonad
                      
                      , QuickCheck
