--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -34,7 +34,7 @@ library
                    SetExtra,
                    TreesThatGrow,
 
-                   Isomorphisms
+                   Isomorphisms, Isomorphisms2
   build-depends:       base >= 4.10 && < 5
                      , ghc-prim
                      , reflection
