--- a/hie.yaml
+++ b/hie.yaml
@@ -21,5 +21,5 @@ cradle:
     - path: "data-bag/src"
       component: "lib:data-bag"
     
-    - path: "nerdle"
+    - path: "nerdle/src"
       component: "lib:nerdle"
