--- a/nerdle/nerdle.cabal
+++ b/nerdle/nerdle.cabal
@@ -7,8 +7,8 @@ extra-source-files:  ABOUT
 
 library
   hs-source-dirs: src
-  exposed-modules: V4, V6, V8, Digit, Nerdle, EliminationGame, WordleLike, WordleLike.Hint
-  build-depends: base >= 4.14, distributive, adjunctions, containers, data-bag
+  exposed-modules: V4, V6, V8, Digit, Collection, Util, Nerdle, EliminationGame, WordleLike, WordleLike.Hint
+  build-depends: base >= 4.14, distributive, adjunctions, containers, vector, reflection, data-bag
   ghc-options:  -Wall -Wcompat
 
   default-language: Haskell2010
@@ -17,5 +17,12 @@ executable list-nerdle
   hs-source-dirs: app
   main-is: list-nerdle.hs
   build-depends: base >= 4.14, nerdle
+  ghc-options: -Wall
+  default-language: Haskell2010
+
+executable nerdle-solver
+  hs-source-dirs: app
+  main-is: nerdle-solver.hs
+  build-depends: base >= 4.14, vector, containers, nerdle
   ghc-options: -Wall
   default-language: Haskell2010
