--- a/nerdle/nerdle.cabal
+++ b/nerdle/nerdle.cabal
@@ -24,6 +24,6 @@ executable wordle-solver
   hs-source-dirs: app
   main-is: wordle-solver.hs
   other-modules: WordleAppCommons
-  build-depends: base >= 4.14, vector, containers, nerdle
+  build-depends: base >= 4.14, vector, containers, random, nerdle
   ghc-options: -Wall
   default-language: Haskell2010
