--- a/nerdle/nerdle.cabal
+++ b/nerdle/nerdle.cabal
@@ -7,7 +7,7 @@ extra-source-files:  ABOUT
 
 library
   hs-source-dirs: src
-  exposed-modules: Digit, Collection, Nerdle, EliminationGame, WordleLike
+  exposed-modules: Digit, Collection, Nerdle, WordleLike
   build-depends: base >= 4.14, containers, vector, semialign, reflection, data-bag
   ghc-options:  -Wall -Wcompat
 
@@ -23,7 +23,7 @@ executable list-nerdle
 executable wordle-solver
   hs-source-dirs: app
   main-is: wordle-solver.hs
-  other-modules: WordleAppCommons
+  other-modules: Types, Util, Search
   build-depends: base >= 4.14, vector, containers, random, nerdle, deepseq
   ghc-options: -Wall
   default-language: Haskell2010
