--- a/hie.yaml
+++ b/hie.yaml
@@ -32,3 +32,6 @@ cradle:
 
     - path: "graph-chart/app"
       component: "exe:graph-chart"
+    
+    - path: "monads-collection.cabal"
+      component: "lib:monads-collection"
