--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -38,6 +38,8 @@ library
                    TreesThatGrow,
 
                    Isomorphisms, Isomorphisms2,
+
+                   Combinatorics
   build-depends:       base >= 4.10 && < 5
                      , ghc-prim
                      , reflection
@@ -64,6 +66,7 @@ library
                      , profunctors
                      , comonad
                      , kan-extensions
+                     , hyperfunctions
                      
                      , lattices
   ghc-options:       -Wall -Wcompat
