--- a/cabal.project
+++ b/cabal.project
@@ -1,8 +1,4 @@
-packages: ./*/*.cabal, ./*/*/*.cabal
+packages: ./*/*.cabal
 
 allow-newer: all
 
-source-repository-package
-    type: git
-    location: /home/koji/Haskell/not-owned/typelits-witnesses
-    tag: 3666579b9522cfd639c4627692ce834fd031e521
