--- a/cabal.project
+++ b/cabal.project
@@ -2,3 +2,7 @@ packages: ./*/*.cabal
 
 allow-newer: all
 
+source-repository-package
+    type: git
+    location: https://github.com/viercc/typelits-witnesses.git
+    tag: 25adb0aa63f0bd2459e037139329679fad634113
