--- a/polynomial-comonad/polynomial-comonad.cabal
+++ b/polynomial-comonad/polynomial-comonad.cabal
@@ -18,7 +18,7 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  PolyComonad
+    exposed-modules:  PolyComonad, BabySingleton
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.18.0.0, comonad
