Remove FunctorOf and introduce
... representable profunctors

--- a/concrete-category/concrete-category.cabal
+++ b/concrete-category/concrete-category.cabal
@@ -33,7 +33,10 @@ library
         Concrete.Category.Indiscrete,
         Concrete.Category.Sum,
         Concrete.Category.Product,
-        Concrete.FunctorOf
+        Concrete.Category.Untagged,
+        Concrete.FunctorOf,
+        Concrete.Profunctor,
+        Concrete.Profunctor.Rep
     -- other-modules:
     -- other-extensions:
     
