--- a/cabal.project
+++ b/cabal.project
@@ -6,3 +6,8 @@ source-repository-package
     type: git
     location: https://github.com/viercc/typelits-witnesses.git
     tag: 25adb0aa63f0bd2459e037139329679fad634113
+
+source-repository-package
+    type: git
+    location: https://github.com/viercc/functor-combinators.git
+    tag: 142d915e94eab8be96a819dfa53dfc01688b58d1
