--- a/experiment/experiment.cabal
+++ b/experiment/experiment.cabal
@@ -20,6 +20,7 @@ library
                    Math.CountCoSemigroup,
                    Math.Ordinal,
                    Math.KrohnRhodes,
+                   Math.Bipartite,
 
                    Co,
 
